--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,9 @@
 html {
   box-sizing: border-box;
   font-size: 62.6%; }
+
+body {
+  font-family: "Nunito", sans-serif;
+  color: #6D5D4B;
+  font-weight: 300;
+  line-height: 1.6; }
